--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,7 +16,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" stylesheets="" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.startPageController">
    <children>
-      <Group fx:id="FirstGroup" layoutX="616.0" layoutY="-167.0" opacity="0.0">
+      <Group fx:id="FirstGroup" layoutX="616.0" layoutY="-167.0">
          <children>
             <Text fx:id="quote1" fill="WHITE" layoutX="180.0" layoutY="462.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot;Empowering clubs" wrappingWidth="375.0">
                <font>
@@ -102,11 +101,11 @@
             </Button>
          </children>
       </Group>
-      <Group fx:id="advisorDetails" disable="true" layoutX="757.0" layoutY="209.0">
+      <Group fx:id="advisorDetails" disable="true" layoutX="757.0" layoutY="209.0" opacity="0.0">
          <children>
-            <TextField fx:id="LastName" layoutX="247.0" layoutY="22.0" prefHeight="40.0" prefWidth="207.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="FirstName" layoutY="22.0" prefHeight="40.0" prefWidth="207.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="Email" layoutY="166.0" prefHeight="40.0" prefWidth="331.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="LastNameA" layoutX="247.0" layoutY="22.0" prefHeight="40.0" prefWidth="207.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="FirstNameA" layoutY="22.0" prefHeight="40.0" prefWidth="207.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="EmailAddressA" layoutY="166.0" prefHeight="40.0" prefWidth="331.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Button fx:id="registerButton1" layoutX="142.0" layoutY="398.0" mnemonicParsing="false" onAction="#OnClickAdvisorRegister" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Register" textFill="WHITE">
                <font>
                   <Font name="Calibri Bold" size="22.0" />
@@ -116,25 +115,25 @@
             <Text fill="WHITE" layoutX="256.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
             <Text fill="WHITE" layoutX="14.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
             <Text fill="WHITE" layoutX="15.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Adress" />
-            <TextField fx:id="UserName" layoutY="96.0" prefHeight="40.0" prefWidth="279.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField layoutX="252.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="UserNameA" layoutY="96.0" prefHeight="40.0" prefWidth="279.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="ConfirmPasswordA" layoutX="252.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="270.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password" />
             <Text fill="WHITE" layoutX="16.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-            <TextField layoutX="5.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="PasswordA" layoutX="5.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <TextField fx:id="TeachingId" layoutX="306.0" layoutY="96.0" prefHeight="40.0" prefWidth="146.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="320.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teaching ID" />
             <Text fill="WHITE" layoutX="17.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Department" />
-            <ChoiceBox layoutX="2.0" layoutY="245.0" prefHeight="37.0" prefWidth="204.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <ChoiceBox fx:id="Department" layoutX="2.0" layoutY="245.0" prefHeight="37.0" prefWidth="204.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="256.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Birth" />
-            <DatePicker layoutX="256.0" layoutY="246.0" prefHeight="36.0" prefWidth="191.0" styleClass="formDate" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <DatePicker fx:id="AdvisorDOB" layoutX="256.0" layoutY="246.0" prefHeight="36.0" prefWidth="191.0" styleClass="formDate" stylesheets="@../CSS%20Files/Dashboard.css" />
          </children>
       </Group>
       <Group fx:id="studentDetails" disable="true" layoutX="757.0" layoutY="209.0" opacity="0.0">
          <children>
-            <TextField fx:id="LastNameA" layoutX="247.0" layoutY="22.0" onInputMethodTextChanged="#LastNameA" prefHeight="40.0" prefWidth="207.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="FirstNameA" layoutY="22.0" onInputMethodTextChanged="#FirstNameA" prefHeight="40.0" prefWidth="207.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="EmailAddressA" layoutY="166.0" onInputMethodTextChanged="#EmailAddressA" prefHeight="40.0" prefWidth="331.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <Button fx:id="registerButton11" layoutX="142.0" layoutY="398.0" mnemonicParsing="false" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Register" textFill="WHITE">
+            <TextField fx:id="LastNameS" layoutX="247.0" layoutY="22.0" prefHeight="40.0" prefWidth="207.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="FirstNameS" layoutY="22.0" prefHeight="40.0" prefWidth="207.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="EmailAdressStudent" layoutY="166.0" prefHeight="40.0" prefWidth="331.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <Button fx:id="registerButton11" layoutX="142.0" layoutY="398.0" mnemonicParsing="false" onAction="#OnClickStudentRegister" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Register" textFill="WHITE">
                <font>
                   <Font name="Calibri Bold" size="22.0" />
                </font>
@@ -143,26 +142,17 @@
             <Text fill="WHITE" layoutX="256.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
             <Text fill="WHITE" layoutX="14.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
             <Text fill="WHITE" layoutX="15.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Adress" />
-            <TextField fx:id="UserNameA" layoutY="96.0" onInputMethodTextChanged="#UserNameA" prefHeight="40.0" prefWidth="279.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="ConfirmPasswordA" layoutX="252.0" layoutY="327.0" onInputMethodTextChanged="#ConfirmPasswordA" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="UserNameStudent" layoutY="96.0" prefHeight="40.0" prefWidth="279.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="StudentConfirmPassword" layoutX="252.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="270.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password" />
             <Text fill="WHITE" layoutX="16.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-            <TextField fx:id="PasswordA" layoutX="5.0" layoutY="327.0" onInputMethodTextChanged="#PasswordA" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="TeachingId" layoutX="306.0" layoutY="96.0" onInputMethodTextChanged="#TeachingId" prefHeight="40.0" prefWidth="146.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="StudentPassword" layoutX="5.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="StudentID" layoutX="306.0" layoutY="96.0" prefHeight="40.0" prefWidth="146.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="320.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student ID" />
             <Text fill="WHITE" layoutX="17.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grade" />
-            <ChoiceBox fx:id="Department" layoutX="2.0" layoutY="245.0" onInputMethodTextChanged="#Department" prefHeight="37.0" prefWidth="204.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <ChoiceBox fx:id="Grade" layoutX="2.0" layoutY="245.0" prefHeight="37.0" prefWidth="204.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="256.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Birth" />
-            <DatePicker fx:id="AdvisorDOB" layoutX="256.0" layoutY="246.0" onInputMethodTextChanged="#AdvisorDOB" prefHeight="36.0" prefWidth="191.0" styleClass="formDate" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <Label fx:id="NameLabel1" layoutX="95.0" layoutY="34.0" text="Label" />
-            <Label fx:id="NameLabel2" layoutX="304.0" layoutY="34.0" text="Label" />
-            <Label fx:id="UserNameLabel1" layoutX="109.0" layoutY="108.0" text="Label" />
-            <Label fx:id="TeachingIdLabel" layoutX="352.0" layoutY="108.0" text="Label" />
-            <Label fx:id="EmailLabelA" layoutX="128.0" layoutY="178.0" text="Label" />
-            <Label fx:id="DepartmentLabel" layoutX="81.0" layoutY="255.0" text="Label" />
-            <Label fx:id="AdvisorDOBLabel" layoutX="318.0" layoutY="256.0" text="Label" />
-            <Label fx:id="AdvisorPasswordLabel1" layoutX="90.0" layoutY="339.0" text="Label" />
-            <Label fx:id="AdvisorPasswordLabel2" layoutX="338.0" layoutY="339.0" text="Label" />
+            <DatePicker fx:id="StudentDOB" layoutX="256.0" layoutY="246.0" prefHeight="36.0" prefWidth="191.0" styleClass="formDate" stylesheets="@../CSS%20Files/Dashboard.css" />
          </children>
       </Group>
    </children>
