--- a/project-SACMS/src/main/resources/com/main/projectsacms/CSS Files/Dashboard.css
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/CSS Files/Dashboard.css
@@ -9,6 +9,7 @@
 }
 
 .form-area{
+    -fx-text-fill: white;
     -fx-background-color: black;
     -fx-background-radius: 30;
     -fx-border-radius: 30;
@@ -43,3 +44,18 @@
     -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
 }
 
+.choice-box .context-menu{
+    -fx-text-fill: white;
+    -fx-background-radius: 10;
+    -fx-border-radius: 10;
+    -fx-pref-width: 204px;
+    -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
+}
+
+.choice-box .menu-item:focused {
+    -fx-background-color:  #00d5ff;
+    -fx-background-radius: 6;
+    -fx-border-radius: 6;
+}
+.choice-box .menu-item > .label {
+    -fx-text-fill: white; }
