--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -101,7 +102,7 @@
             </Button>
          </children>
       </Group>
-      <Group fx:id="advisorDetails" disable="true" layoutX="757.0" layoutY="209.0" opacity="0.0">
+      <Group fx:id="advisorDetails" layoutX="757.0" layoutY="209.0" opacity="0.0">
          <children>
             <TextField fx:id="advisorLastName" layoutX="247.0" layoutY="22.0" onKeyTyped="#advisorLastNameValidation" prefHeight="40.0" prefWidth="207.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <TextField fx:id="advisorFirstName" layoutY="22.0" onKeyTyped="#advisorFirstNameValidation" prefHeight="40.0" prefWidth="207.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
@@ -116,16 +117,16 @@
             <Text fill="WHITE" layoutX="14.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
             <Text fill="WHITE" layoutX="15.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Adress" />
             <TextField fx:id="advisorUsername" layoutY="96.0" onKeyTyped="#advisorUserNameValidation" prefHeight="40.0" prefWidth="279.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="advisorConfirmPassword" layoutX="252.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="270.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password" />
             <Text fill="WHITE" layoutX="16.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-            <TextField fx:id="advisorPassword" layoutX="5.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="advisorTeachingID" layoutX="306.0" layoutY="96.0" prefHeight="40.0" prefWidth="146.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="advisorTeachingID" layoutX="306.0" layoutY="96.0" onKeyTyped="#advisorTeachingIDValidation" prefHeight="40.0" prefWidth="146.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="320.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teaching ID" />
             <Text fill="WHITE" layoutX="17.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Department" />
             <ChoiceBox fx:id="advisorDepartment" layoutX="2.0" layoutY="245.0" prefHeight="37.0" prefWidth="204.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="256.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Birth" />
             <DatePicker fx:id="advisorDOB" layoutX="256.0" layoutY="246.0" prefHeight="36.0" prefWidth="191.0" styleClass="formDate" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <PasswordField fx:id="advisorPassword" layoutX="5.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <PasswordField fx:id="advisorConfirmPassword" layoutX="252.0" layoutY="327.0" onKeyTyped="#advisorPasswordValidation" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
          </children>
       </Group>
       <Group fx:id="studentDetails" disable="true" layoutX="757.0" layoutY="209.0" opacity="0.0">
@@ -143,16 +144,16 @@
             <Text fill="WHITE" layoutX="14.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" />
             <Text fill="WHITE" layoutX="15.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Adress" />
             <TextField fx:id="studentUsername" layoutY="96.0" prefHeight="40.0" prefWidth="279.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="studentConfirmPassword" layoutX="252.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="270.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password" />
             <Text fill="WHITE" layoutX="16.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-            <TextField fx:id="studentPassword" layoutX="5.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <TextField fx:id="studentID" layoutX="306.0" layoutY="96.0" prefHeight="40.0" prefWidth="146.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="320.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student ID" />
             <Text fill="WHITE" layoutX="17.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grade" />
             <ChoiceBox fx:id="studentGrade" layoutX="2.0" layoutY="245.0" prefHeight="37.0" prefWidth="204.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="256.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Birth" />
             <DatePicker fx:id="studentDOB" layoutX="256.0" layoutY="246.0" prefHeight="36.0" prefWidth="191.0" styleClass="formDate" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <PasswordField layoutX="5.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <PasswordField layoutX="252.0" layoutY="327.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
          </children>
       </Group>
    </children>
